<resources>
    <string name="app_name">Centralizirana Dostava Hrane</string>
    <string name="password">Zaporka:</string>
    <string name="mail">Elektronička pošta:</string>
    <string name="address">Adresa:</string>
    <string name="phone">Kontakt broj mobitela:</string>
    <string name="register">Registriraj se</string>
    <string name="titleReg">Forma za registraciju</string>
    <string name="login">Prijava</string>
    <string name="run">Pokreni bez prijave</string>
    <string name="auth_failed">Provjera autentičnosti nije uspjela</string>
    <string name="auth_success">Registracija uspješna</string>
    <string name="login_success">Prijava uspješna</string>
    <string name="logout">Odjava</string>
    <string name="cart">Košarica</string>
    <string name="choose_size">Izaberi veličinu (Pritisni na košaricu!)</string>
    <string name="empty_cart">Košarica je prazna</string>
    <string name="remove">Ukloni</string>
    <string name="set">Postavi</string>
    <string name="cancel">Odustani</string>
    <string name="quantity">Količina: </string>
    <string name="are_you_sure">Jeste li sigurni?</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="subtotal">Suma košarice</string>
    <string name="payment_method">Način narudžbe:</string>
    <string name="onRecieve">Dostava</string>
    <string name="pickup">Pick-up</string>
    <string name="street">Ulica:</string>
    <string name="streetNumber">Kućni broj:</string>
    <string name="userLastName">Prezime:</string>
    <string name="contactNumber">Kontakt broj:</string>
    <string name="floor">Kat:</string>
    <string name="apartmentNumber">Broj stana:</string>
    <string name="necessarily">*</string>
    <string name="choose">Pošalji narudžbu</string>
    <string name="required">Obavezno polje!</string>
    <string name="choose_address">Izbor adrese</string>
    <string name="save">Spremi</string>
    <string name="reset">Reset</string>
    <string name="city">Grad/naselje:</string>
    <string name="instructions">Želite li upute do lokacije?</string>
    <string name="menuPhone">Nazovi</string>
    <string name="orderHistory">Povijest narudžbi</string>
    <string name="noItems">Vaša košarica je prazna.</string>
    <string name="fillIt">Napunite ju!</string>
    <string name="comment">Komentar:</string>
    <string name="proceed">Nastavi</string>
    <string name="address_set">Adresa postavljena</string>
    <string name="address_save">Uspješno ste spremili adresu</string>
    <string name="address_delete">Uspješno ste obrisali adresu</string>
    <string name="empty_order_history">Povijest narudžbi je prazna, \nnaručite nešto!</string>
    <string name="confirm">Potvrda</string>
    <string name="choose_restaurant">Izbor restorana</string>
    <string name="orderConfirm">Potvrditi narudžbu?</string>
    <string name="pickMethod">Izaberite način narudžbe</string>
    <string name="food_name">Naziv</string>
    <string name="price">Cijena</string>
    <string name="ingredients">Sastojci</string>
    <string name="loading">Učitavanje...</string>
    <string name="error">Pogreška!</string>
    <string name="no_more_than_one">Ne možete imati više od jednog restorana u košarici!</string>
    <string name="all">Svi restorani</string>
    <string name="favorites">Favoriti</string>
    <string name="order_sent">Narudžba poslana</string>

    <string name="sigin_text_almost_there">Centralizirana dostava hrane</string>
    <string name="google_web_client_id" translatable="false">886715338644-ssdkgaerehe6m1a33vna3gvghpeu14mr.apps.googleusercontent.com</string>
    <string name="text_please_wait">Molimo pričekajte…</string>
    <string name="something_went_wrong">Nešto je pošlo po krivu. Molimo pokušajte ponovno</string>
    <string name="msg_login_successful">Prijava uspješna</string>
    <string name="unable_to_login">Prijava nije moguća s tim računom</string>
    <string name="no_internet_connection">Nema internetske veze.</string>
    <string name="refreshed">Osvježeno</string>
    <string name="home_back_btn_msg">Pritisni nazad ponovno za izlaz.</string>
    <string name="invalid_input_provided">Nepravilan parametar obezbjeđen prilikom otvaranja restorana.</string>
    <string name="size_not_checked">Niste odabrali veličinu</string>
    <string name="filters">Prikaži filtere</string>
    <string name="bookmarks">Prikaži favorite</string>
    <string name="showing_bookmarks">Prikaz favorita</string>
    <string name="showing_all_restaurants">Prikaz svih restorana</string>
</resources>
