<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:title="@string/filters"
        android:orderInCategory="1"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_bookmarks"
        android:title="@string/bookmarks"
        android:orderInCategory="2"
        android:icon="@drawable/ic_bookmarks"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_cart"
        android:title="@string/cart"
        android:orderInCategory="3"
        android:icon="@drawable/counter_layer"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_order_history"
        android:title="@string/orderHistory"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="5"
        app:showAsAction="never"  />

</menu>