<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_phone"
        android:title="@string/menuPhone"
        android:orderInCategory="0"
        android:icon="@drawable/phone"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_cart"
        android:title="@string/cart"
        android:orderInCategory="1"
        android:icon="@drawable/empty_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_order_history"
        android:title="@string/orderHistory"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="3"
        app:showAsAction="never"  />

</menu>