<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_order_type"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/onRecieve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_delivery"
            android:textSize="22sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_delivery"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userLastName"
                android:id="@+id/tv_last_name"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:id="@+id/tv_address"
                android:layout_below="@id/tv_last_name"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streetNumber"
                android:id="@+id/tv_street_number"
                android:layout_below="@id/tv_address"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/tv_city"
                android:layout_below="@id/tv_street_number"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor"
                android:id="@+id/tv_floor"
                android:layout_below="@id/tv_city"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartmentNumber"
                android:id="@+id/apartmentNumberText"
                android:layout_below="@id/tv_floor"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactNumber"
                android:id="@+id/tv_phone_number"
                android:layout_below="@id/apartmentNumberText"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_phone_number"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/bt_select_address"
                    android:text="@string/choose_address"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/bt_add_address"
                    android:text="@string/save"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/bt_reset"
                    android:text="@string/reset"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

            </LinearLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:textSize="20sp"
                android:inputType="text"
                android:id="@+id/et_last_name"
                android:layout_toEndOf="@+id/tv_last_name"
                android:layout_alignBaseline="@id/tv_last_name"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bg"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:textSize="20sp"
                android:inputType="text"
                android:id="@+id/et_street"
                android:layout_toEndOf="@+id/tv_address"
                android:layout_alignBaseline="@id/tv_address"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bg"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:textSize="20sp"
                android:inputType="text"
                android:layout_toEndOf="@+id/tv_street_number"
                android:layout_alignBaseline="@id/tv_street_number"
                android:layout_marginStart="10dp"
                android:id="@+id/et_street_number"
                android:background="@drawable/edittext_bg"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:textSize="20sp"
                android:inputType="text"
                android:layout_toEndOf="@+id/tv_city"
                android:layout_alignBaseline="@id/tv_city"
                android:layout_marginStart="10dp"
                android:id="@+id/et_city"
                android:background="@drawable/edittext_bg"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:textSize="20sp"
                android:inputType="numberSigned"
                android:layout_toEndOf="@+id/tv_floor"
                android:layout_alignBaseline="@id/tv_floor"
                android:layout_marginStart="10dp"
                android:id="@+id/et_floor"
                android:background="@drawable/edittext_bg"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:textSize="20sp"
                android:inputType="numberSigned"
                android:layout_toEndOf="@+id/apartmentNumberText"
                android:layout_alignBaseline="@id/apartmentNumberText"
                android:layout_marginStart="10dp"
                android:id="@+id/apartmentNumberEdit"
                android:background="@drawable/edittext_bg"
                android:visibility="gone"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:textSize="20sp"
                android:inputType="phone"
                android:layout_toEndOf="@+id/tv_phone_number"
                android:layout_alignBaseline="@id/tv_phone_number"
                android:layout_marginStart="10dp"
                android:id="@+id/et_phone_number"
                android:background="@drawable/edittext_bg"/>

        </RelativeLayout>

        <RadioButton
            android:text="@string/pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_pickup"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="22sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_pickup"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/white"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userLastName"
                android:id="@+id/tv_last_name_pickup"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:textSize="20sp"
                android:inputType="text"
                android:id="@+id/et_last_name_pickup"
                android:layout_toEndOf="@+id/tv_last_name_pickup"
                android:layout_alignBaseline="@id/tv_last_name_pickup"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bg"/>

        </RelativeLayout>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textSize="20sp"
        android:id="@+id/bt_confirm"
        android:layout_below="@+id/rg_order_type"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    </RelativeLayout>

</ScrollView>