<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameText"
            android:layout_below="@+id/username"
            android:layout_alignRight="@+id/passwordText"
            android:layout_alignEnd="@+id/passwordText"
            android:layout_alignLeft="@+id/passwordText"
            android:layout_alignStart="@+id/passwordText"
            android:inputType="textVisiblePassword|textNoSuggestions" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/username"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/password"
            android:layout_below="@+id/usernameText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/passwordText"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btnRegistration"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run"
            android:id="@+id/btnNoLogin"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/btnRegistration"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    </ScrollView>

</RelativeLayout>

